test/semantics/programs/valid/valid-operation-dif-types4.guav
# Should pass since this is a operands are compatible types for the operation

oneToSeven = {one: 1, two: 2} + {three: 3, four: 4, five: 5}
oneToSeven += {six: 6, seven: 7}
