test/semantics/programs/invalid/invalid-dictionary-operation1.guav
# Shouldn't pass since dictionaries cannot be combined

oneToSeven = {one: 1, two: 2} + {three: 3, four: 4, five: 5}
oneToSeven += {six: 6, seven: 7}
